<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/btn_search"
            android:hint="@string/btn_search"
            android:inputType="text"
            android:imeOptions="actionSearch"/>
    </LinearLayout>
    <ListView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>