<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:title="@string/btn_home">
    </item>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:title="@string/btn_search">
    </item>
</menu>