<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="renameInputField" type="id"/>
    <item name="createFolderField" type="id"/>
    <item name="ok" type="id"/>
</resources>